--- a/tx.config
+++ b/tx.config
@@ -3,13 +3,13 @@ host = https://www.transifex.com
 lang_map =
 
 [test-project-88.samplepo]
-file_filter = sample.po
-source_file = translations/<lang>/sample.po
+source_file = sample.po
+file_filter = translations/<lang>/sample.po
 source_lang = en
 type = PO
 
 [test-project-88.testyml]
-file_filter = test.yml
-source_file = translations/<lang>/test.yml
+source_file = test.yml
+file_filter = translations/<lang>/test.yml
 source_lang = en
 type = YML
